[tool.poetry]
name = "py-ntments-today"
version = "0.1.0"
description = ""
authors = ["PythBuster <pythbuster@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.1.0"


[tool.poetry.group.black.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
